discussion/kv_engine/160717/160717_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Introduce dedicated checkpoint destruction task

As a first step towards "eager" checkpoint removal, this patch
introduces a new CheckpointDestroyerTask.

This task receives ownership of checkpoints, and destroys them as soon
as possible. The task only runs when checkpoints have been queued for
destruction.

For now, this is a seemingly unnecessary level of indirection - the
CheckpointVisitor now queues checkpoints for a different task to
destroy, rather than destroying them immediately.

However, this separation will, in later patches, allow checkpoints to
be queued as soon as they become unreferenced (e.g., by cursor
movement), and the CheckpointVisitor will no longer be necessary.

Change-Id: Iee7ba8a5a0b994f93f731584f548b04f195f6c0b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-09-02 15:00:55.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-02 16:46:53.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39371/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(498): error C2679: binary "=": no operator found which takes a right-hand operand of type "MagmaKVStore::{ctor}::<lambda_96039e9b3ecc5a280deeadce493c0115>" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39371/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11945/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:22:20: error: out-of-line definition of "CheckpointVisitor" does not match any declaration in "CheckpointVisitor" [clang-diagnostic-error]
CheckpointVisitor::CheckpointVisitor(
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.h:30:29: error: use of undeclared identifier "CheckpointDestroyerTask" [clang-diagnostic-error]
            std::shared_ptr<CheckpointDestroyerTask> ckptDestroyerTask);
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.h:46:21: error: use of undeclared identifier "CheckpointDestroyerTask" [clang-diagnostic-error]
    std::shared_ptr<CheckpointDestroyerTask> ckptDestroyerTask;
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11945/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:22:20:
error: out-of-line definition of "CheckpointVisitor" does not match any declaration in "CheckpointVisitor" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11945/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33530/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.h:30:29:
error: use of undeclared identifier "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33530/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1588/ : FAILURE

Compile error at [2021-09-02T15:09:38.420Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:498:51:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13556/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12703/ : FAILURE

Compile error at [2021-09-02T15:03:27.451Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:498:51:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12703/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1606/ : FAILURE

Compile error at [2021-09-02T15:09:38.985Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:500:5:
error: no match for ?operator=? (operand types are ?magma::Magma::CompactionCallbackBuilder? {aka ?std::function<std::unique_ptr<magma::Magma::CompactionCallback>(short unsigned int)>?} and ?MagmaKVStore::MagmaKVStore(MagmaKVStoreConfig&)::<lambda()>?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1606/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14222/ : FAILURE

Compile error at [2021-09-02T15:15:44.846Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:498:51:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13793/ : FAILURE

Compile error at [2021-09-02T15:18:41.627Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:500:5:
error: no match for ?operator=? (operand types are ?magma::Magma::CompactionCallbackBuilder? {aka ?std::function<std::unique_ptr<magma::Magma::CompactionCallback>(short unsigned int)>?} and ?MagmaKVStore::MagmaKVStore(MagmaKVStoreConfig&)::<lambda()>?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13793/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21733/ : FAILURE

Compile error at [2021-09-02T15:19:22.087Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:498:51:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21733/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10728/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
